[gd_scene load_steps=2 format=2]

[ext_resource path="res://app/weapons/AbstractWeapon.gd" type="Script" id=1]

[node name="AbstractWeapon" type="Node2D"]
script = ExtResource( 1 )

[node name="SFX_Shot" type="AudioStreamPlayer" parent="."]

[node name="SFX_Reload" type="AudioStreamPlayer" parent="."]

[node name="SFX_EmptyClip" type="AudioStreamPlayer" parent="."]

[node name="Timer_Reload" type="Timer" parent="."]
one_shot = true

[node name="Timer_ROF" type="Timer" parent="."]
one_shot = true
[connection signal="timeout" from="Timer_Reload" to="." method="onReloadFinish"]
[connection signal="timeout" from="Timer_ROF" to="." method="onRofUnlock"]
